Populated data from API

--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
                 <th>Deaths</th>
             </tr>
             </thead>
-            <tbody>
-            <tr>
-                <td id="date"></td>
-                <td id="areaName"></td>
-                <td id="latestBy"></td>
-                <td id="deathNew"></td>
-            </tr>
+            <tbody id="result">
+            
             </tbody>
         </table>
     </div>
