Changed date format
Updated date format to British English date format

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container mt-3" style="width: 450px;">
-        <h2 class="text-center">Covid Latest Report - UK</h2>
+        <h2 class="text-center" style="color:#267af3">Covid Latest Report - UK</h2>
         <table class="table table-bordered">
             <thead>
             <tr>
